--- a/construction_project_management_base/views/project.xml
+++ b/construction_project_management_base/views/project.xml
@@ -2,7 +2,7 @@
 <odoo>
     <data>
 
-        <menuitem id="project.menu_projects" name="Dashboard" parent="project.menu_main_pm" sequence="1"/>
+        <menuitem id="project.menu_projects" name="Projects" parent="project.menu_main_pm" sequence="1"/>
 
         <record id="open_view_project" model="ir.actions.act_window">
             <field name="name">Projects</field>
