--- a/construction/views/project.xml
+++ b/construction/views/project.xml
@@ -121,6 +121,77 @@
             <field name="domain">[('project_id','=', active_id)]</field>
     	</record>
 
+        <record id="project_tree_view" model="ir.ui.view">
+            <field name="name">project.tree</field>
+            <field name="model">project.project</field>
+            <field name="arch" type="xml">
+                <tree string="Projects">
+                    <field name="name"/>
+                    <field name="partner_id"/>
+                    <field name="user_id"/>
+                    <field name="employee_id"/>
+                    <field name="state"/>
+                </tree>
+            </field>
+        </record>
+
+        <record id="project_view_graph" model="ir.ui.view">
+            <field name="name">project.graph.view</field>
+            <field name="model">project.project</field>
+            <field name="arch" type="xml">
+                <graph string="Projects">
+                    <field name="state" type="row"/>
+                    <field name="end_date" interval="month" type="row"/>
+                </graph>
+            </field>
+        </record>
+
+        <record id="project_view_pivot" model="ir.ui.view">
+            <field name="name">project.pivot.view</field>
+            <field name="model">project.project</field>
+            <field name="arch" type="xml">
+                <pivot string="Projects" display_quantity="true">
+                    <field name="name" type="row"/>
+<!--                    <field name="state" type="measure"/>-->
+                </pivot>
+            </field>
+        </record>
+
+        <record id="project_view_dashboard" model="ir.ui.view">
+            <field name="name">project.view.dashboard</field>
+            <field name="model">project.project</field>
+            <field name="mode">primary</field>
+            <field name="arch" type="xml">
+                <dashboard>
+                    <view type="graph" ref="construction.project_view_graph"/>
+                    <group>
+                        <group>
+<!--                            <aggregate name="name" string="Project" group_operator="count" field="id" measure="__count__"/>-->
+                            <aggregate name="state" field="state" group_operator="count" string="state"/>
+                        </group>
+                    </group>
+                    <view type="pivot" ref="construction.project_view_pivot"/>
+                </dashboard>
+            </field>
+        </record>
+
+        <record id="project_map_view" model="ir.ui.view">
+            <field name="name">project.view.map</field>
+            <field name="model">project.project</field>
+            <field name="arch" type="xml">
+                <map res_partner="partner_id"  default_order="start_date" routing="true">
+                    <marker-popup>
+                        <field name="name" string="Project"/>
+                        <field name="partner_id" string="Customer" />
+                        <field name="partner_street" string="Address" />
+                        <field name="partner_zip" string="zip"/>
+                        <field name="partner_city" string="city"/>
+                        <field name="partner_phone" string="Phone"/>
+                    </marker-popup>
+                </map>
+            </field>
+        </record>
+
         <record id="job_cost_project_form_view" model="ir.ui.view">
             <field name="name">project.inherited.form</field>
             <field name="model">project.project</field>
@@ -131,6 +202,15 @@
                         groups="project.group_project_manager"
                             attrs="{'invisible': [('job_cost_count', '=', 0)]}"
                             class="btn-primary"/>
+                    <button type="object" name="set_draft" string="Draft" groups="project.group_project_manager"
+                            attrs="{'invisible': [('state', '=', 'draft')]}"/>
+                    <button type="object" name="set_study" string="Study" groups="project.group_project_manager"
+                            attrs="{'invisible': [('state', '=', 'study')]}"/>
+                    <button type="object" name="set_inprogress" string="In Progress" groups="project.group_project_manager"
+                            attrs="{'invisible': [('state', '=', 'inprogress')]}"/>
+                    <button type="object" name="set_canceled" string="Canceled" groups="project.group_project_manager"
+                            attrs="{'invisible': [('state', '=', 'canceled')]}" class="btn-danger"/>
+                    <field name="state" options="{'clickable': '1', 'fold_field': 'fold'}" widget="statusbar" statusbar_visible="draft,study,inprogress,finished,closed,canceled"/>
                 </xpath>
                 <button name="%(project.act_project_project_2_project_task_all)d" position="replace">
                     <button name="%(construction.action_view_project_phase)d" type="action" class="oe_stat_button" icon="fa-book">
@@ -150,6 +230,9 @@
                     </button>
                     <button string="Stock" name="%(construction.action_project_stock)d" type="action"
                             class="oe_stat_button" icon="fa-book">
+                    </button>
+                    <button class="oe_stat_button" type="object" icon="fa-tasks" name="view_notes">
+                        <field string="Notes" name="notes_count" widget="statinfo" options="{'label_field': 'label_notes'}"/>
                     </button>
                 </button>
                 <div class="oe_title" position="replace">
@@ -215,6 +298,16 @@
                             </group>
                         </group>
                     </page>
+                    <page name="construction_sites" string="Construction Site Detail">
+                    <group>
+                        <group>
+                            <field name="type_of_construction"/>
+                            <field name="location_id" context="{'search_default_customer':1, 'show_address': 1}" options='{"always_reload": True}'/>
+                        </group>
+                        <group>
+                        </group>
+                    </group>
+                </page>
                 </xpath>
                 <page name="settings" position="before">
                     <page name="General Info" string="General Info">
