--- a/construction/views/estimated_sheet.xml
+++ b/construction/views/estimated_sheet.xml
@@ -103,10 +103,11 @@
 								</group>
 							</page>
 							<page string="Materials">
-								<field name="material_ids" nolabel="1">
-									<tree editable="bottom">
+								<field name="material_ids" context="{'default_project': project_id}" nolabel="1">
+									<tree editable="bottom" >
+										<field name="project"/>
 										<field name="phase_id" readonly="1" force_save="1"/>
-										<field name="task_id"/>
+										<field name="task_id" domain="[('project_id', '=', project)]" options="{'no_create': True}"/>
 										<field name="product_id"/>
 										<field name="product_uom"/>
 										<field name="product_qty"/>
@@ -118,8 +119,9 @@
 								</field>
 							</page>
 							<page string="Labours">
-								<field name="labour_ids" nolabel="1">
+								<field name="labour_ids" context="{'default_project': project_id}" nolabel="1">
 									<tree editable="bottom">
+										<field name="project" invisible="1"/>
 										<field name="labour_boq" invisible="1"/>
 										<field name="phase_id" readonly="1" force_save="1"/>
 										<field name="task_id"/>
@@ -134,8 +136,9 @@
 								</field>
 							</page>
 							<page string="Equipments">
-								<field name="asset_ids" nolabel="1">
+								<field name="asset_ids" context="{'default_project': project_id}" nolabel="1">
 									<tree editable="bottom">
+										<field name="project" invisible="1"/>
 										<field name="phase_id" readonly="1" force_save="1"/>
 										<field name="task_id"/>
 										<field name="asset_id"/>
@@ -149,8 +152,9 @@
 								</field>
 							</page>
 							<page string="Overhead">
-								<field name="expense_ids" nolabel="1">
+								<field name="expense_ids" context="{'default_project': project_id}" nolabel="1">
 									<tree editable="bottom">
+										<field name="project" invisible="1"/>
 										<field name="phase_id" readonly="1" force_save="1"/>
 										<field name="task_id"/>
 										<field name="expenses_id"/>
