--- a/construction/views/job_costing_view.xml
+++ b/construction/views/job_costing_view.xml
@@ -18,64 +18,110 @@
                             <field name="state" widget="statusbar" statusbar_visible="draft,confirm,approve,done"/>
                         </header>
                     <sheet>
-                        <div class="oe_button_box" name="button_box">
-                                <button name="action_view_purchase_order_line"
-                                    type="object"
-                                    class="oe_stat_button"
-                                    icon="fa-pencil-square-o">
-                                    <field string="Purchase Order Lines" name="purchase_order_line_count" widget="statinfo"/>
-                                </button>
-                                <button name="action_view_hr_timesheet_line"
-                                    type="object"
-                                    class="oe_stat_button"
-                                    icon="fa-book">
-                                    <field string="HR Timesheet Lines" name="timesheet_line_count" widget="statinfo"/>
-                                </button>
-                                <button name="action_view_vendor_bill_line"
-                                    type="object"
-                                    class="oe_stat_button"
-                                    icon="fa-bars">
-                                    <field string="Vendor Invoice Lines" name="account_invoice_line_count" widget="statinfo"/>
-                                </button>
-                                <button name="action_view_jobcost_sheet_lines"
-                                    type="object"
-                                    class="oe_stat_button"
-                                    icon="fa-pencil-square-o">
-                                    <field string="Cost Lines" name="job_costsheet_line_count" widget="statinfo"/>
-                                </button>
-                            <button name="action_view_invoice"
-                                    type="object"
-                                    class="oe_stat_button"
-                                    icon="fa-pencil-square-o"
-                                    help="Customer Invoices">
-                                    <field string="Customer Invoices" name="invoice_count" widget="statinfo"/>
-                                </button>
-                        </div>
-                        <div class="oe_title">
-                            <h1>
-                                <field name="number"/>
-                            </h1>
-                        </div>
+<!--                        <div class="oe_button_box" name="button_box">-->
+<!--                                <button name="action_view_purchase_order_line"-->
+<!--                                    type="object"-->
+<!--                                    class="oe_stat_button"-->
+<!--                                    icon="fa-pencil-square-o">-->
+<!--                                    <field string="Purchase Order Lines" name="purchase_order_line_count" widget="statinfo"/>-->
+<!--                                </button>-->
+<!--                                <button name="action_view_hr_timesheet_line"-->
+<!--                                    type="object"-->
+<!--                                    class="oe_stat_button"-->
+<!--                                    icon="fa-book">-->
+<!--                                    <field string="HR Timesheet Lines" name="timesheet_line_count" widget="statinfo"/>-->
+<!--                                </button>-->
+<!--                                <button name="action_view_vendor_bill_line"-->
+<!--                                    type="object"-->
+<!--                                    class="oe_stat_button"-->
+<!--                                    icon="fa-bars">-->
+<!--                                    <field string="Vendor Invoice Lines" name="account_invoice_line_count" widget="statinfo"/>-->
+<!--                                </button>-->
+<!--                                <button name="action_view_jobcost_sheet_lines"-->
+<!--                                    type="object"-->
+<!--                                    class="oe_stat_button"-->
+<!--                                    icon="fa-pencil-square-o">-->
+<!--                                    <field string="Cost Lines" name="job_costsheet_line_count" widget="statinfo"/>-->
+<!--                                </button>-->
+<!--                            <button name="action_view_invoice"-->
+<!--                                    type="object"-->
+<!--                                    class="oe_stat_button"-->
+<!--                                    icon="fa-pencil-square-o"-->
+<!--                                    help="Customer Invoices">-->
+<!--                                    <field string="Customer Invoices" name="invoice_count" widget="statinfo"/>-->
+<!--                                </button>-->
+<!--                        </div>-->
                         <group>
                             <group>
-                                <field name="name" attrs="{'readonly' : [('state','in',('approve','done','cancel'))]}"/>
+                                <field name="name" force_save="1"/>
                                 <field name="project_id" attrs="{'readonly' : [('state','in',('approve','done','cancel'))]}"/>
-                                <field name="analytic_id" attrs="{'readonly' : [('state','in',('approve','done','cancel'))]}"/>
-                                <field name="task_id" attrs="{'readonly' : [('state','in',('approve','done','cancel'))]}"/>
-                                <field name="partner_id" attrs="{'readonly' : [('state','in',('approve','done','cancel'))]}"/>
                             </group>
                             <group>
                                 <field name="start_date"/>
                                 <field name="complete_date"/>
-                                <field name="user_id"/>
-                                <field name="company_id" groups="base.group_multi_company"/>
-                                <field name="currency_id" groups="base.group_multi_currency"/>
-                                <field name="description" attrs="{'readonly' : [('state','in',('approve','done','cancel'))]}"/>
-                                <field name="so_number" attrs="{'readonly' : [('state','in',('approve','done','cancel'))]}"/>
-                                <field name="billable_method" attrs="{'readonly' : [('state','in',('approve','done','cancel'))]}"/>
                             </group>
                         </group>
                         <notebook>
+                            <page string="Notes">
+                                <group>
+                                    <field name="description" nolabel="1" attrs="{'readonly' : [('state','in',('approve','done','cancel'))]}"/>
+                                </group>
+                            </page>
+                            <page string="Materials">
+								<field name="material_ids" context="{'default_project': project_id}" nolabel="1">
+									<tree editable="bottom" >
+										<field name="project" invisible="1"/>
+										<field name="phase_id" readonly="1" force_save="1"/>
+										<field name="task_id" domain="[('project_id', '=', project)]" options="{'no_create': True}"/>
+										<field name="product_id"/>
+                                        <field name="description"/>
+										<field name="product_uom"/>
+										<field name="product_qty"/>
+										<field name="act_per_unit"/>
+										<field name="total_material" sum="tm" force_save="1"/>
+									</tree>
+								</field>
+							</page>
+							<page string="Labours">
+								<field name="labour_ids" context="{'default_project': project_id}" nolabel="1">
+									<tree editable="bottom">
+										<field name="project" invisible="1"/>
+										<field name="phase_id" readonly="1" force_save="1"/>
+										<field name="task_id"/>
+										<field name="name"/>
+                                        <field name="description"/>
+										<field name="labour_no"/>
+										<field name="work_day"/>
+                                        <field name="total_labour"/>
+									</tree>
+								</field>
+							</page>
+							<page string="Equipments">
+								<field name="asset_ids" context="{'default_project': project_id}" nolabel="1">
+									<tree editable="bottom">
+										<field name="project" invisible="1"/>
+										<field name="phase_id" readonly="1" force_save="1"/>
+										<field name="task_id"/>
+										<field name="asset_id"/>
+                                        <field name="description"/>
+										<field name="asset_qty"/>
+										<field name="asset_w_days"/>
+                                        <field name="total_asset"/>
+									</tree>
+								</field>
+							</page>
+                            <page string="Overhead">
+                                <field name="expense_ids" context="{'default_project': project_id}" nolabel="1">
+                                    <tree editable="bottom">
+                                        <field name="project" invisible="1"/>
+                                        <field name="phase_id" readonly="1" force_save="1"/>
+                                        <field name="task_id"/>
+                                        <field name="expenses_id"/>
+                                        <field name="description"/>
+                                        <field name="total_expense" sum="te"/>
+                                    </tree>
+                                </field>
+                            </page>
                             <page string="Materials" name="job_cost_material_page">
                                 <field name="job_cost_line_ids" nolabel="1" context="{'default_analytic_id':analytic_id,'default_job_type':'material'}" attrs="{'readonly' : [('state','in',('cancel'))]}">
                                     <tree editable="bottom">
@@ -167,20 +213,43 @@
                                     </tree>
                                 </field>
                             </page>
+                            <page string="Other Info">
+                                <group>
+                                    <field name="partner_id" force_save="1"/>
+                                    <field name="analytic_id" force_save="1"/>
+                                    <field name="user_id"/>
+                                    <field name="company_id" groups="base.group_multi_company"/>
+                                    <field name="currency_id" groups="base.group_multi_currency"/>
+                                </group>
+                            </page>
+                            <page string="Approvals">
+			            		<group>
+				            		<group>
+				            			<field name="confirmed_by"/>
+				            			<field name="approved_by"/>
+				            			<field name="cancelled_by"/>
+				            		</group>
+				            		<group>
+				            			<field name="confirmed_date"/>
+				            			<field name="approved_date" />
+				            			<field name="cancelled_date" />
+				            		</group>
+			            		</group>
+			            	</page>
                             <page invisible="1">
                             <field name="invoice_ids"/>
                         </page>
                         </notebook>
                         <group>
-                         <group class="oe_subtotal_footer oe_right" colspan="2" name="jobcost_total">
-                                <field name="material_total" widget="monetary"/>
-                                <field name="labor_total" widget="monetary"/>
-                                <field name="overhead_total" widget="monetary"/>
-                                <field name="jobcost_total" widget="monetary"/>
-                         </group>
-                         <label for="notes_job"/>
-                         <field name="notes_job" class="oe_inline" nolabel="1" placeholder="Setup default Job Details or Technical contents."/>
-                            <div class="oe_clear"/>
+                             <group class="oe_subtotal_footer oe_right" colspan="2" name="jobcost_total">
+                                 <field name="material_total" widget="monetary"/>
+                                 <field name="labor_total" widget="monetary"/>
+                                 <field name="overhead_total" widget="monetary"/>
+                                 <field name="jobcost_total" widget="monetary"/>
+                             </group>
+<!--                             <label for="notes_job"/>-->
+<!--                             <field name="notes_job" class="oe_inline" nolabel="1" placeholder="Setup default Job Details or Technical contents."/>-->
+                             <div class="oe_clear"/>
                          </group>
                     </sheet>
                     <div class="oe_chatter">
@@ -196,7 +265,7 @@
             <field name="model">job.costing</field>
             <field name="arch" type="xml">
                 <tree>
-                    <field name="number"/>
+<!--                    <field name="number"/>-->
                     <field name="name"/>
                     <field name="project_id"/>
                     <field name="start_date"/>
@@ -213,7 +282,7 @@
                 <field name="model">job.costing</field>
                 <field name="arch" type="xml">
                     <search string="Search Job Coasting">
-                        <field name="number"/>
+<!--                        <field name="number"/>-->
                         <field name="name"/>
                         <field name="start_date"/>
                         <field name="complete_date"/>
